Dont use modules since it breaks resources